@@ -1,4 +1,4 @@
-ams-2.0.0 (2009-05-??)
+ams-2.0.0 (2009-06-12)
 
   New Features
     o Redesign of 3D look
