@@ -1,3 +1,8 @@
+2009-06-12 Karsten Wiese <fzuuzf@googlemail.com>
+	* main.cpp, modularsynth.cpp, modularsynth.h, msoptions.h:
+	  -v "verbose" command line option.
+	* configure.ac: bump VERSION to "2.0.0".
+
 2009-06-09 Karsten Wiese <fzuuzf@googlemail.com>
 	* m_midiout.cpp, m_scope.cpp, m_wavout.cpp, module.cpp, synthdata.cpp:
 	  Fix crash on switching presets containing M_wavout or M_scope
